# assessing-pinns-ocean-modelling

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
Data/AdvDif/: X_star.txt
Data/Waves_Square/: H_0.txt  U_star.txt  X_star.txt
Notebooks/: Advection-Diffusion Equation Func vs Loss.ipynb  Advection-Diffusion Equation Lambda vs Loss.ipynb  Advection-Diffusion Equation Robustness.ipynb  Burgers Equation Func vs Loss.ipynb  Burgers Equation Lambda vs Loss.ipynb  Burgers Equation Robustness.ipynb  Wave_Equation_Func_vs_Loss.ipynb  Wave_Equation_Lambda_vs_Loss.ipynb  Wave_Equation_Robustness.ipynb
Plots/: AdvDif.ipynb  Burgers.ipynb  Paper.ipynb  advdif_Nu100.csv  advdif_Nu2500.csv  advdif_Nu500.csv  advdif_funcs.csv  advdif_robustness.csv  burgers_Nu100.csv  burgers_Nu200.csv  burgers_Nu50.csv  burgers_Nu500.csv  burgers_funcs.csv  burgers_robustness.csv  waves_Nu100.csv  waves_Nu200.csv  waves_Nu500.csv  waves_funcs.csv  waves_robustness.csv
