[tool.poetry]
name = "ocean_pinns"
version = "0.0.1"
description = "Supporting code for paper 'Towards Optimally Weighted Physics-Informed Neural Networks in Ocean Modelling'."
authors = ["annonymized"]

packages = []

[tool.poetry.dependencies]
python = "^3.7.3"
torch = "1.7.1"
matplotlib = "^3.4.2"
wandb = "^0.10.31"
notebook = "^6.4.12"
scipy = "1.6.0"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
bandit = "1.6.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 127

[tool.pytest.ini_options]
addopts = "--doctest-modules"
junit_family = "xunit2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"